fixed typo in doc
